ClaimDevice
